plugins {
    id('com.android.application')
    id('kotlin-android')
    id('kotlin-kapt')
    id('androidx.navigation.safeargs.kotlin')
    id('kotlin-parcelize')
}

def localProperties = new Properties()
def localPropertiesFile = rootProject.file("local.properties")
if (localPropertiesFile.exists()) {
    localProperties.load(new FileInputStream(localPropertiesFile))
}

android {
    namespace 'com.bandesha.sencyfitness'
    compileSdk 36

    defaultConfig {
        applicationId "com.bandesha.sencyfitness"
        minSdk 29
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            debuggable true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = '17'
    }

    kapt {
        javacOptions {
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
        }
    }

    buildFeatures {
        dataBinding true
        viewBinding true
    }

    packagingOptions {
        pickFirst '**/*.so'
    }
}

dependencies {
    implementation 'com.sency.smkitui:smkitui:1.3.5'

    implementation 'androidx.core:core-ktx:1.17.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation "androidx.work:work-runtime-ktx:2.10.4"

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'

    implementation 'com.google.android.material:material:1.13.0'

    // Navigation Component
    implementation 'androidx.navigation:navigation-fragment-ktx:2.9.4'
    implementation 'androidx.navigation:navigation-ui-ktx:2.9.4'

    // Lifecycle components
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation "androidx.lifecycle:lifecycle-common-java8:2.9.4"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.4"

    // Kotlin components
    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
}